# learn-jax

./: .gitignore  README.md  main.py  pyproject.toml
exercises/: jax-grain1.md  overview.md  testall-w-checker.sh  testall.sh  tmpl-chk.py  tmpl.py
exercises/cses-1068/: solve.py  testall.sh
exercises/cses-1069/: solve.py
exercises/cses-1070/: checker.py  solve.py  testall-w-checker.sh
exercises/cses-1072/: solve.py
exercises/cses-1074/: whole.py
exercises/cses-1083/: solve.py
exercises/cses-1092/: checker.py  solve.py
exercises/cses-1094/: solve.py
exercises/cses-1618/: solve.py
exercises/cses-1619/: whole.py
exercises/cses-1621/: whole.py
exercises/cses-1623/: solve.py
exercises/cses-1640/: whole.py
exercises/cses-1643/: whole.py
exercises/cses-1754/: solve.py
exercises/cses-1755/: checker.py  solve.py
exercises/cses-2183/: whole.py
exercises/cses-2205/: checker.py  solve.py
exercises/cses-3399/: checker.py  solve.py
exercises/cses-3419/: whole.py
exercises/cses-3421/: whole.py
jax-lax/: jnp-plus.md
jnp/: array-ops.md  elementwise.md  matrix-multiplication-plus.md  misc.md  overview.md  polynomial-set.md  reduction-statistics.md  shape-manipulation.md  to-revise.md  to-revise2.md  to-revise3.md  to-revise4.md  to-revise5.md  to-revise6.md  types.md
src/my_lib/: __init__.py  batching.py  tests_data_source.py
src/proj_0_toy_model/: toy.md  v1_all_in_one.py  v2_with_grain.py  whole.py
