[project]
name = "learn_jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grain>=0.2.16",
    "jax>=0.10.0",
    "jaxtyping>=0.3.9",
    "numpy>=2.4.4",
    "typeguard>=4.5.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "my_lib"
model-root = "src"

[tool.uv_build]
include = ["my_lib"]

